tests/invalid/bug191.err_exp
bug191.m:029: In clause for type class method implementation for `baz(in, in,
bug191.m:029:   out((bug191.a)))':
bug191.m:029:   mode error: argument 3 did not get sufficiently instantiated.
bug191.m:029:   Final instantiatedness of `HeadVar__3' was `ground',
bug191.m:029:   expected final instantiatedness was
bug191.m:029:     named inst a,
bug191.m:029:     which expands to
bug191.m:029:       bound(
bug191.m:029:         a(ground)
bug191.m:029:       ).
